kubernetes/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: boutique-gateway
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/part-of: devops-portfolio
    app.kubernetes.io/phase: "1"
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
