kubernetes/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boutique-route
  namespace: boutique
  labels:
    app.kubernetes.io/part-of: devops-portfolio
    app.kubernetes.io/phase: "1"
spec:
  parentRefs:
    - name: boutique-gateway
      namespace: envoy-gateway-system
  hostnames:
    - boutique.invincibledevops.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
